apps/jenkins/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-lan
  namespace: jenkins
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`jenkins.mmlinaric.com`) || Host(`jenkins-resources.mmlinaric.com`)
      kind: Rule
      services:
        - {name: jenkins, port: 8080}
  tls:
    secretName: jenkins-tls
